Fixed no overflow-y: auto in composer-help

--- a/modules/composer.less
+++ b/modules/composer.less
@@ -58,7 +58,7 @@
 		resize:none;
 	}
 
-	.preview {
+	.preview, .help {
 		overflow-y: auto;
 	}
 
